--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
         <ul>
 
             <a href="https://www.youtube.com/channel/UCRkmkRD_tsfkx9DUTEqE3Tg" target="_blanck"> <li id="li_1"> YOUTUBE </li> </a>
-            <a href="https://www.facebook.com/xdUltra/"> <li id="li_2"> FACEBOOK </li> </a>
-            <a href="https://www.instagram.com/universo_ultra/"> <li id="li_3"> INSTAGRAM </li> </a>
-            <a href="https://discord.gg/svdbQfMWY8"> <li id="li_4"> DISCORD </li> </a>
-            <a href="https://www.twitch.tv/universo_ultra"> <li id="li_5"> TWITCH </li> </a>
+            <a href="https://www.facebook.com/xdUltra/" target="_blanck"> <li id="li_2"> FACEBOOK </li> </a>
+            <a href="https://www.instagram.com/universo_ultra/" target="_blanck"> <li id="li_3"> INSTAGRAM </li> </a>
+            <a href="https://discord.gg/svdbQfMWY8" target="_blanck"> <li id="li_4"> DISCORD </li> </a>
+            <a href="https://www.twitch.tv/universo_ultra" target="_blanck"> <li id="li_5"> TWITCH </li> </a>
 
         </ul>
 
