--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
     <hr>
 
-    <p style="text-align: center; margin-bottom: 55px; font-family: 'Courier New', Courier, monospace; color: gray;">  POWERED BY: <a href="https://tonioweb.netlify.com" target="_blanck;"> TONIOWEB</a> | DEV: UNIVERSO ULTRA </p>
+    <p style="text-align: center; margin-bottom: 55px; font-family: 'Courier New', Courier, monospace; color: gray;">  POWERED BY: <a href="https://tonioweb.netlify.com" target="_blanck"> TONIOWEB</a> | DEV: UNIVERSO ULTRA </p>
 
 </footer>
 
