--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="author" content="Universo Ultra">
     <meta name="kwywords" content="Mis Redes sociales, universo ultra youtube, ultra, desarollador de videojuegos">    
     <link rel="stylesheet" href="estilos.css">
+    <script src="https://kit.fontawesome.com/6982db7920.js" crossorigin="anonymous"></script>
 
 </head>
 
@@ -15,7 +16,7 @@
 
 <header>
 
-    <h1>UNIVERSO ULTRA</h1>
+    <h1>UNIVERSO ULTRA <i class="fas fa-check-circle" title="Verificado"></i> </h1>
 
 <center><img src="imagenes/universo ultra.png" alt="Universo Ultra Logo"></center>
 
