--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <header>
 
-    <h1>UNIVERSO ULTRA <i class="fas fa-check-circle" title="Verificado"></i> </h1>
+    <h1>UNIVERSO ULTRA <i class="fas fa-check-circle"></i> </h1>
 
 <center><img src="imagenes/universo ultra.png" alt="Universo Ultra Logo"></center>
 
